# mindpal-backend

./: README.md  pyproject.toml
app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
